# cold-string

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
bench/: Cargo.toml  memory.py  report.py
bench/benches/: bench.rs  collection.rs  eq.rs
bench/src/: lib.rs
bench/tests/: memory.rs
benches/: bench.rs
cold-string/: Cargo.toml  README.md
cold-string/src/: lib.rs  rkyv.rs  vint.rs
cold-string/tests/: property.proptest-regressions  property.rs
src/: lib.rs  vint.rs
tests/: memory.rs  property.rs
