[package]
name = "bench"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
fastrand = "2.3.0"

[dev-dependencies]
cold-string = { path = "../cold-string" }
criterion = "0.5"
sysinfo = "0.38.2"
ahash = "0.8.12"

compact_string = "0.1.0"
smol_str = "0.3.5"
compact_str = "0.9.0"
smartstring = "1.0.1"
smallstr = "0.3.1"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "eq"
harness = false

[[bench]]
name = "collection"
harness = false
