[package]
name = "cold-string"
version = "0.2.0"
edition = "2018"
rust-version = "1.60.0"
authors = ["tomtomwombat"]
description = "A 1-word SSO string that saves up to 24 bytes over String."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tomtomwombat/cold-string/"
repository = "https://github.com/tomtomwombat/cold-string/"
keywords = ["string", "compact", "small", "memory"]
categories = ["encoding", "parsing", "memory-management", "text-processing"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
serde = ["dep:serde", "serde/alloc"]
rkyv = ["dep:rkyv", "rkyv/alloc", "rkyv/bytecheck"]

[dependencies]
serde = { version = "1.0.228", optional = true, default-features = false }
rkyv = { version = "0.8.15", optional = true, default-features = false }
sptr = { version = "0.3.2", default-features = false }
rustversion = "1.0.22"

[dev-dependencies]
hashbrown = "0.12.3"
serde_test = "1.0.177"
proptest = {version = "=1.8.0", default-features = false, features = ["std", "bit-set"] }
